--- a/UfrmLogin.fmx
+++ b/UfrmLogin.fmx
@@ -3,23 +3,24 @@ object frmLogin: TfrmLogin
   Top = 0
   BorderStyle = bsSingle
   Caption = 'Form1'
-  ClientHeight = 567
-  ClientWidth = 384
+  ClientHeight = 402
+  ClientWidth = 320
   Visible = True
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [dkDesktop, dkiPhone, dkiPad]
   DesignerMobile = True
-  DesignerWidth = 384
-  DesignerHeight = 592
-  DesignerDeviceName = 'Google Nexus 4'
+  DesignerWidth = 320
+  DesignerHeight = 427
+  DesignerDeviceName = '2.7 QVGA Android Phone'
   DesignerOrientation = 0
   DesignerOSVersion = ''
   object edtLogin: TEdit
     Touch.InteractiveGestures = [igLongTap, igDoubleTap]
+    Align = alTop
     TabOrder = 0
-    Position.Y = 212.000000000000000000
-    Width = 384.000000000000000000
+    Position.Y = 169.000000000000000000
+    Width = 320.000000000000000000
     Height = 32.000000000000000000
     HelpType = htKeyword
     TextPrompt = 'Usu'#225'rio'
@@ -27,46 +28,34 @@ object frmLogin: TfrmLogin
   end
   object edtSenha: TEdit
     Touch.InteractiveGestures = [igLongTap, igDoubleTap]
+    Align = alTop
     TabOrder = 1
-    Position.Y = 169.000000000000000000
-    Width = 385.000000000000000000
+    Position.Y = 201.000000000000000000
+    Width = 320.000000000000000000
     Height = 32.000000000000000000
     TextPrompt = 'Senha'
     KillFocusByReturn = False
   end
-  object btnLogin: TButton
-    Height = 44.000000000000000000
-    Position.X = 217.000000000000000000
-    Position.Y = 304.000000000000000000
+  object pnlSuperior: TPanel
+    Align = alTop
+    Height = 169.000000000000000000
+    Width = 320.000000000000000000
     TabOrder = 2
-    Text = 'Login'
-    Width = 73.000000000000000000
   end
-  object lblEsqueciMinhaSenha: TLabel
-    FontColor = claCadetblue
-    StyledSettings = [ssFamily, ssSize, ssStyle]
-    Height = 23.000000000000000000
-    Position.X = 96.000000000000000000
-    Position.Y = 352.000000000000000000
-    Text = 'Esqueci a minha senha'
-    Width = 217.000000000000000000
-  end
-  object btnRegister: TButton
-    Height = 44.000000000000000000
-    Position.X = 104.000000000000000000
-    Position.Y = 304.000000000000000000
+  object pnlBotoes: TPanel
+    Align = alTop
+    Height = 40.000000000000000000
+    Position.Y = 233.000000000000000000
+    Width = 320.000000000000000000
     TabOrder = 3
-    Text = 'Register'
-    Width = 106.000000000000000000
-  end
-  object Label1: TLabel
-    FontColor = claMidnightblue
-    StyledSettings = [ssFamily, ssSize, ssStyle]
-    Height = 23.000000000000000000
-    Position.X = 104.000000000000000000
-    Position.Y = 112.000000000000000000
-    Text = 'MyDeed'
-    Width = 82.000000000000000000
-    Trimming = ttCharacter
+    object btnLogin: TButton
+      Align = alRight
+      Height = 40.000000000000000000
+      Position.X = 247.000000000000000000
+      TabOrder = 0
+      Text = 'Login'
+      Width = 73.000000000000000000
+      OnClick = btnLoginClick
+    end
   end
 end
